Add beginner-friendly guide for pytest unit testing
Added a comprehensive guide for writing unit tests with pytest, covering installation, project structure, writing tests, assertions, fixtures, parameterized tests, exception handling, async testing, FastAPI endpoint testing, and best practices.

--- a/Step 5. Testing & Code Style/01. Writing unit tests with pytest.md
+++ b/Step 5. Testing & Code Style/01. Writing unit tests with pytest.md
@@ -1,1 +1,352 @@
-# Writing unit tests with pytest
+Below is a **complete beginner-friendly, step-by-step guide** to **writing unit tests with pytest**, designed specially for developers coming from PHP or other languages who are learning Python.
+
+This guide covers:
+
+1. What is pytest
+2. Installing and project structure
+3. Writing your first test
+4. Assertions
+5. Test fixtures
+6. Parametrized tests
+7. Testing exceptions
+8. Testing async functions
+9. Testing FastAPI endpoints
+10. Running tests and best practices
+
+---
+
+# ⭐ 1. What is pytest?
+
+`pytest` is Python’s most popular testing framework because it is:
+
+* Simple
+* Flexible
+* Supports fixtures
+* Supports async testing
+* Integrates perfectly with FastAPI
+* Has clean, readable syntax
+
+Example syntax:
+
+```python
+def test_add():
+    assert 1 + 1 == 2
+```
+
+---
+
+# ⭐ 2. Installing pytest
+
+```
+pip install pytest
+```
+
+For async tests:
+
+```
+pip install pytest-asyncio
+```
+
+---
+
+# ⭐ 3. Project Structure (Recommended)
+
+```
+project/
+ ├── app/
+ │     ├── main.py
+ │     ├── services/
+ │     │       └── math_service.py
+ │     └── ...
+ ├── tests/
+ │     ├── test_math_service.py
+ │     └── test_api.py
+ └── pyproject.toml (if using poetry)
+```
+
+All test files should begin with:
+
+```
+test_*.py
+```
+
+or end with:
+
+```
+*_test.py
+```
+
+---
+
+# ⭐ 4. Writing Your First Test
+
+### Code to test (`math_service.py`):
+
+```python
+def add(a, b):
+    return a + b
+```
+
+### Unit test (`test_math_service.py`):
+
+```python
+from app.services.math_service import add
+
+def test_add_numbers():
+    assert add(2, 3) == 5
+```
+
+Run tests:
+
+```
+pytest
+```
+
+---
+
+# ⭐ 5. Using Assertions
+
+You simply use Python’s `assert` keyword.
+
+Examples:
+
+```python
+assert 5 > 3
+assert "hello".upper() == "HELLO"
+assert [1, 2, 3] == [1, 2, 3]
+assert "a" in "apple"
+```
+
+pytest gives friendly error messages.
+
+---
+
+# ⭐ 6. Fixtures (VERY IMPORTANT!)
+
+Fixtures provide **shared setup/teardown code**.
+
+### Example fixture:
+
+```python
+import pytest
+
+@pytest.fixture
+def sample_data():
+    return {"name": "Nitin", "age": 25}
+```
+
+### Use fixture:
+
+```python
+def test_user(sample_data):
+    assert sample_data["name"] == "Nitin"
+```
+
+Fixtures help:
+
+* Create DB sessions
+* Create test clients
+* Mock services
+* Reuse common settings
+
+---
+
+# ⭐ 7. Parametrized Tests (test multiple cases)
+
+```python
+import pytest
+from app.services.math_service import add
+
+@pytest.mark.parametrize(
+    "a,b,expected",
+    [
+        (1, 2, 3),
+        (10, 5, 15),
+        (-1, 1, 0),
+    ]
+)
+def test_add(a, b, expected):
+    assert add(a, b) == expected
+```
+
+Runs the same test multiple times with different inputs.
+
+---
+
+# ⭐ 8. Testing Exceptions
+
+### Code to test:
+
+```python
+def divide(a, b):
+    if b == 0:
+        raise ValueError("Cannot divide by zero")
+    return a / b
+```
+
+### Test:
+
+```python
+import pytest
+from app.services.math_service import divide
+
+def test_divide_by_zero():
+    with pytest.raises(ValueError):
+        divide(10, 0)
+```
+
+You can check error message too:
+
+```python
+with pytest.raises(ValueError, match="Cannot divide"):
+    divide(10, 0)
+```
+
+---
+
+# ⭐ 9. Testing Async Code (pytest-asyncio)
+
+### Code to test:
+
+```python
+import asyncio
+
+async def async_add(a, b):
+    await asyncio.sleep(0.1)
+    return a + b
+```
+
+### Test:
+
+```python
+import pytest
+from app.services.math_service import async_add
+
+@pytest.mark.asyncio
+async def test_async_add():
+    result = await async_add(2, 3)
+    assert result == 5
+```
+
+---
+
+# ⭐ 10. Testing FastAPI Endpoints (Important!)
+
+FastAPI provides a test client:
+
+```
+pip install httpx pytest
+```
+
+### Example API (`main.py`):
+
+```python
+from fastapi import FastAPI
+
+app = FastAPI()
+
+@app.get("/hello")
+def hello():
+    return {"message": "Hello World"}
+```
+
+### Test using httpx test client (`test_api.py`):
+
+```python
+import pytest
+from httpx import AsyncClient
+from app.main import app
+
+@pytest.mark.asyncio
+async def test_hello():
+    async with AsyncClient(app=app, base_url="http://test") as client:
+        response = await client.get("/hello")
+    assert response.status_code == 200
+    assert response.json() == {"message": "Hello World"}
+```
+
+This is how professional FastAPI tests are written.
+
+---
+
+# ⭐ 11. Running Tests
+
+Run all tests:
+
+```
+pytest
+```
+
+Run a specific test file:
+
+```
+pytest tests/test_math_service.py
+```
+
+Run a specific test:
+
+```
+pytest tests/test_math_service.py::test_add_numbers
+```
+
+Show print statements:
+
+```
+pytest -s
+```
+
+Show detailed report:
+
+```
+pytest -v
+```
+
+---
+
+# ⭐ 12. Best Practices
+
+✔ Keep tests simple and small
+✔ One assertion per behavior
+✔ Test success cases + error cases
+✔ Use fixtures for reusable resources
+✔ Test async endpoints with pytest-asyncio
+✔ Separate unit tests and integration tests
+✔ Mock external APIs (httpx, requests)
+✔ Use descriptive test names
+
+---
+
+# ⭐ 13. Example: Real-World Test Structure
+
+```
+tests/
+ ├── unit/
+ │     ├── test_services.py
+ │     └── test_utils.py
+ ├── integration/
+ │     └── test_database.py
+ ├── api/
+ │     └── test_user_api.py
+ ├── conftest.py
+```
+
+`conftest.py` stores global fixtures used across multiple files.
+
+---
+
+# ⭐ Summary
+
+You learned:
+
+✔ How pytest works
+✔ How to write basic tests
+✔ Assertions
+✔ Fixtures
+✔ Parametrized tests
+✔ Exception testing
+✔ Async test support
+✔ FastAPI endpoint testing
+✔ Pytest best practices
+
+---
+
