Revise markdown formatting for 'black' guide
Updated formatting and structure of the markdown document to enhance readability and consistency.

--- a/Step 5. Testing & Code Style/02. Code formatting using black.md
+++ b/Step 5. Testing & Code Style/02. Code formatting using black.md
@@ -1,1 +1,229 @@
-# Code formatting using black
+# Code Formatting Using Black
+
+`black` is one of the most popular and widely accepted code formatters in Python. It enforces a consistent style across your entire project automatically.
+
+Below is a clear, beginner-friendly guide.
+
+---
+
+# What Is Black?
+
+Black is an **opinionated Python code formatter**.
+Its purpose is simple:
+
+* You do not decide formatting rules.
+* Black formats your code for you.
+* This makes code consistent everywhere.
+
+Black is often described as:
+
+> “The uncompromising code formatter.”
+
+---
+
+# Why Use Black?
+
+Benefits:
+
+* Enforces a standard format across teams.
+* Removes arguments about code style.
+* Works with editors like VS Code.
+* Integrates with pre-commit hooks.
+* Fast and stable.
+* Works with Python 3.x and modern syntax.
+
+---
+
+# Installing Black
+
+Using pip:
+
+```
+pip install black
+```
+
+Using Poetry:
+
+```
+poetry add --dev black
+```
+
+---
+
+# Formatting a File or Directory
+
+Format a single file:
+
+```
+black app/main.py
+```
+
+Format an entire project:
+
+```
+black .
+```
+
+Black automatically rewrites files.
+
+---
+
+# Example Before and After Formatting
+
+Unformatted code:
+
+```python
+def add(a,b): return a+b
+```
+
+After Black:
+
+```python
+def add(a, b):
+    return a + b
+```
+
+Black enforces:
+
+* Line breaks where needed
+* Proper spacing
+* Quote normalization (double quotes by default)
+* Consistent indentation
+* 88-character line length (configurable)
+
+---
+
+# Configuring Black Using pyproject.toml
+
+Recommended for real projects:
+
+Create or edit `pyproject.toml`:
+
+```toml
+[tool.black]
+line-length = 88
+target-version = ["py312"]
+skip-string-normalization = false
+```
+
+Common options:
+
+* `line-length`: default is 88
+* `target-version`: e.g. `"py311"`, `"py312"`
+* `skip-string-normalization`:
+
+  * true → preserve single vs double quotes
+  * false → Black normalizes quotes
+
+---
+
+# Using Black With VS Code
+
+Install extension:
+
+1. Open Extensions panel.
+2. Search: “Black Formatter”
+3. Install **ms-python.black-formatter**
+
+Configure VS Code settings:
+
+Open settings JSON:
+
+```
+Ctrl + Shift + P → "Open Settings (JSON)"
+```
+
+Add:
+
+```json
+{
+    "python.formatting.provider": "black",
+    "python.formatting.blackArgs": ["--line-length", "88"],
+    "editor.formatOnSave": true
+}
+```
+
+Now Black will auto-format on save.
+
+---
+
+# Using Black With Pre-commit (Recommended for Teams)
+
+Install pre-commit:
+
+```
+pip install pre-commit
+```
+
+Create `.pre-commit-config.yaml`:
+
+```yaml
+repos:
+  - repo: https://github.com/psf/black
+    rev: 24.3.0
+    hooks:
+      - id: black
+```
+
+Activate:
+
+```
+pre-commit install
+```
+
+Now Black runs automatically before every git commit.
+
+---
+
+# Using Black Inside CI/CD
+
+Common examples:
+
+GitHub Actions:
+
+```yaml
+- name: Run Black Formatter
+  run: black --check .
+```
+
+This ensures CI fails if code is not formatted.
+
+---
+
+# Black vs Other Formatters
+
+| Tool          | Purpose                   |
+| ------------- | ------------------------- |
+| black         | Automatic formatting      |
+| isort         | Sort imports              |
+| flake8 / ruff | Linting / error detection |
+| mypy          | Type checking             |
+
+Typical modern Python setup:
+
+* **black** (format)
+* **isort** (organize imports)
+* **ruff** (linting + formatting + replace flake8/isort)
+* **mypy** (optional)
+
+---
+
+# Summary
+
+Black helps you:
+
+* Maintain consistent formatting
+* Reduce code review noise
+* Speed up development
+* Improve team collaboration
+* Avoid manual formatting decisions
+
+Black is widely used in:
+
+* FastAPI projects
+* Django apps
+* ML pipelines
+* Production backend code
+* Enterprise microservices
+
+---
