flake8 linting documentation
The linting guide for flake8 with detailed explanations, installation instructions, usage examples, and integration tips.

--- a/Step 5. Testing & Code Style/03. Linting with flake8.md
+++ b/Step 5. Testing & Code Style/03. Linting with flake8.md
@@ -1,1 +1,258 @@
-# Linting with flake8
+Here is a **clean, beginner-friendly, deep explanation** of **linting with flake8**, without any star icons in headings (as per your preference).
+
+---
+
+# Linting With flake8
+
+`flake8` is one of the most popular Python **linting** tools.
+A *linter* checks for:
+
+* Code quality issues
+* Style violations
+* Possible bugs
+* Unused imports
+* Logical mistakes
+* Naming issues
+* Complexity problems
+
+`flake8` helps keep your project clean, readable, and professional.
+
+---
+
+# What flake8 Checks
+
+flake8 combines the power of three tools:
+
+| Tool        | Purpose                                     |
+| ----------- | ------------------------------------------- |
+| pycodestyle | PEP8 style enforcement                      |
+| pyflakes    | Detects unused imports, undefined variables |
+| mccabe      | Measures code complexity                    |
+
+Together, flake8 catches most common problems in Python code.
+
+---
+
+# Installing flake8
+
+Using pip:
+
+```
+pip install flake8
+```
+
+Using Poetry:
+
+```
+poetry add --dev flake8
+```
+
+---
+
+# Running flake8
+
+Lint the entire project:
+
+```
+flake8 .
+```
+
+Lint a specific file:
+
+```
+flake8 app/main.py
+```
+
+flake8 prints warnings or errors such as:
+
+```
+app/main.py:10:5: E225 missing whitespace around operator
+app/utils.py:3:1: F401 'json' imported but unused
+```
+
+These codes come from:
+
+* **E/W** → pycodestyle issues
+* **F** → pyflakes errors
+* **C** → complexity errors (mccabe)
+
+---
+
+# Configuring flake8 (Recommended)
+
+Create a `setup.cfg` or `pyproject.toml` to ignore rules or adjust limits.
+
+### Example using `setup.cfg`:
+
+```ini
+[flake8]
+max-line-length = 88
+ignore = 
+    E203
+    W503
+exclude =
+    .git
+    __pycache__
+    build
+    dist
+```
+
+### Why ignore E203 and W503?
+
+Because black formatter and flake8 disagree on these rules.
+Ignoring them allows Black + flake8 to work together smoothly.
+
+---
+
+# Common flake8 Error Codes
+
+| Code | Meaning                            |
+| ---- | ---------------------------------- |
+| E225 | Missing whitespace around operator |
+| E302 | Expected 2 blank lines             |
+| E501 | Line too long                      |
+| F401 | Unused import                      |
+| F821 | Undefined variable                 |
+| F841 | Assigned variable is never used    |
+
+These errors help make your code clean and safe.
+
+---
+
+# Example Before and After Fixing
+
+Unclean code:
+
+```python
+import json, os
+
+def add(a,b):return a+b
+```
+
+flake8 output:
+
+```
+F401 'json' imported but unused
+E225 missing whitespace around operator
+E701 multiple statements on one line
+```
+
+Clean code:
+
+```python
+import os
+
+def add(a, b):
+    return a + b
+```
+
+---
+
+# Integrating Black and flake8 Together
+
+Since Black formats your code and flake8 lints it, they should be configured to avoid conflicts.
+
+Recommended pipeline:
+
+1. Black: formats code
+2. isort: sorts imports
+3. flake8: linting
+
+---
+
+# Using flake8 in VS Code
+
+Install extension:
+
+* "Python" by Microsoft
+* "flake8 linting" (optional)
+
+Then open settings JSON:
+
+```
+Ctrl + Shift + P → Open Settings (JSON)
+```
+
+Add:
+
+```json
+{
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true
+}
+```
+
+VS Code will show lint errors live.
+
+---
+
+# Using flake8 With Pre-commit Hooks (Best Practice)
+
+Add to `.pre-commit-config.yaml`:
+
+```yaml
+repos:
+  - repo: https://github.com/pycqa/flake8
+    rev: 6.1.0
+    hooks:
+      - id: flake8
+```
+
+Install:
+
+```
+pre-commit install
+```
+
+Now flake8 runs automatically before every git commit.
+
+---
+
+# Using flake8 in CI/CD
+
+Example GitHub Action:
+
+```yaml
+- name: Lint with flake8
+  run: flake8 .
+```
+
+CI will fail if lint errors exist.
+
+---
+
+# flake8 vs Other Linters
+
+| Linter | Strength                                  |
+| ------ | ----------------------------------------- |
+| flake8 | Classic, stable, widely used              |
+| pylint | Very strict, many rules                   |
+| ruff   | Modern, ultra-fast replacement for flake8 |
+| black  | Formatter only (not a linter)             |
+
+Modern recommendation:
+
+* Ruff handles linting + formatting + import sorting
+* Black handles formatting
+* flake8 is still used in many large projects and CI pipelines
+
+But for modern developer experience, Ruff is becoming the standard.
+
+If you want, I can explain Ruff next.
+
+---
+
+# Summary
+
+You learned:
+
+* What flake8 does
+* How to install and use it
+* How to configure it
+* Common error codes
+* Integration with Black, pre-commit, and CI
+* Usage in VS Code
+
+flake8 is essential for writing clean, readable Python code and catching early mistakes before they become bugs.
+
+---
